--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
         </div>
         
-        <div class="container-fluid bg-white p-5">
+        <section class="container-fluid bg-white p-5">
             <div class="container">
                 <div class="h3 mb-5">"What I learnt from CUHK"</div>
                 <div class="row">
@@ -49,7 +49,7 @@
                             <div id="inner0" class="inner-wiggle">
                                 <div id="flower-container" class="container d-flex flex-row flex-wrap p-0">
                                     <div id="flower0" class="flower-transition"></div>
-                                    <img class="col-12 col-md-6" src="./static/ep1.jpeg">
+                                    <img class="col-12 col-md-6" src="./static/1.png">
                                     <div id="text" class="col-12 col-md-6 ps-4 pt-4">
                                         <div class="">EP | 1 </div>
                                         <h4 class="pt-4">Multimedia Thinking</h4>
@@ -67,9 +67,9 @@
                             <div id="inner1" class="inner-wiggle d-flex flex-row flex-wrap container p-0">
                                 <div id="flower-container" class="container d-flex flex-row flex-wrap p-0">
                                     <div id="flower1" class="flower-transition"></div>
-                                    <img class="col-12 col-md-6" src="./static/ep1.jpeg">
+                                    <img class="col-12 col-md-6" src="./static/2.png">
                                     <div id="text" class="col-12 col-md-6 ps-4 pt-4">
-                                        <div class="">EP | 1 </div>
+                                        <div class="">EP | 2 </div>
                                         <h4 class="pt-4">Multimedia Thinking</h4>
                                         <div class="fw-light" style="font-size: 90%;">Sammy Leung</div>
                                         <div class="fw-light" style="font-size: 90%;">Radio DJ</div>
@@ -85,9 +85,9 @@
                             <div id="inner2" class="inner-wiggle d-flex flex-row flex-wrap container p-0">
                                 <div id="flower-container" class="container d-flex flex-row flex-wrap p-0">
                                     <div id="flower2" class="flower-transition"></div>
-                                    <img class="col-12 col-md-6" src="./static/ep1.jpeg">
+                                    <img class="col-12 col-md-6" src="./static/3.png">
                                     <div id="text" class="col-12 col-md-6 ps-4 pt-4">
-                                        <div class="">EP | 1 </div>
+                                        <div class="">EP | 3 </div>
                                         <h4 class="pt-4">Multimedia Thinking</h4>
                                         <div class="fw-light" style="font-size: 90%;">Sammy Leung</div>
                                         <div class="fw-light" style="font-size: 90%;">Radio DJ</div>
@@ -103,9 +103,9 @@
                             <div id="inner3" class="inner-wiggle d-flex flex-row flex-wrap container p-0">
                                 <div id="flower-container" class="container d-flex flex-row flex-wrap p-0">
                                     <div id="flower3" class="flower-transition"></div>
-                                    <img class="col-12 col-md-6" src="./static/ep1.jpeg">
+                                    <img class="col-12 col-md-6" src="./static/4.png">
                                     <div id="text" class="col-12 col-md-6 ps-4 pt-4">
-                                        <div class="">EP | 1 </div>
+                                        <div class="">EP | 4 </div>
                                         <h4 class="pt-4">Multimedia Thinking</h4>
                                         <div class="fw-light" style="font-size: 90%;">Sammy Leung</div>
                                         <div class="fw-light" style="font-size: 90%;">Radio DJ</div>
@@ -123,7 +123,7 @@
                                     <div id="flower4" class="flower-transition"></div>
                                     <img class="col-12 col-md-6" src="./static/ep1.jpeg">
                                     <div id="text" class="col-12 col-md-6 ps-4 pt-4">
-                                        <div class="">EP | 1 </div>
+                                        <div class="">EP | 5 </div>
                                         <h4 class="pt-4">Multimedia Thinking</h4>
                                         <div class="fw-light" style="font-size: 90%;">Sammy Leung</div>
                                         <div class="fw-light" style="font-size: 90%;">Radio DJ</div>
@@ -135,18 +135,18 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
 
-        <section class="pt-4 pb-4 bg-foot-pic">
+        <section id="foot-pic" class="pt-4 pb-4 bg-foot-pic">
             <div class="container">
                 <div class="row">
                     <div class="col col-12 col-lg-6 d-flex justify-content-center">
-                        <div class="d-flex justify-content-center" data-ani="zoomIn" style="max-width: 400px">
-                            <img class="foot-pic" src="./static/0410_CUHKers and Their Careers (Full version).jpg">
+                        <div class="d-flex justify-content-center" style="max-width: 400px">
+                            <img class="foot-pic" data-aos="zoom-in-up" src="./static/0410_CUHKers and Their Careers (Full version).jpg">
                         </div>
                     </div>
                     <div class="col col-12 col-lg-6">
-                        <div class="intro">
+                        <div class="intro" data-aos="zoom-in-up">
                             <div class="wrap ani animated" data-ani-delay=".5" style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">
                                 <h1>CUHKERS AND THEIR  CAREERS</h1>
                                 <p>
@@ -155,7 +155,9 @@
                                     Like the tree branches that intertwine, the college system facilitates a strong network among students from all walks of life;
                                     Like the water that ebbs and flows, students come together and travel in all directions. Old trees on campus document all these with their tree rings, testifying how the university nurtures talents and witnessing our hard work bearing fruit.
                                 </p>
-                                <a href="javascript:void(0);" class="btn sty1">Click here to read</a>
+                                <div style="position:relative;">
+                                    <a class="button-17" role="button">Click Here to Read</a>
+                                </div>
                             </div>
                             
                         </div>
@@ -164,28 +166,13 @@
             </div>
         </section>
 
-        <!-- <section id="sep">
-            <div class="container-fluid pb-4 bg-white">
+        <section class="container-fluid pt-3 bg-white relative justify-content-center d-flex">
+            <a class="button-57 col-4" role="button" href="https://www.cuhk.edu.hk/osa/cuhkers/en/">
+                <span class="text">Previous Episode</span>
+                <span>CUHKERS</span>
+            </a>
 
-            </div>
-        </section> -->
-
-        <!-- <div class="center container">
-            <div class="d-flex flex-row">
-                <div>
-                    <img class="foot-pic ms-auto" src="./static/0410_CUHKers and Their Careers (Full version).jpg">
-                </div>
-                <div class="col-lg-1"></div>
-                <div class="col-12 col-lg-6 container" style="padding-left: 0vw; padding-right: 10vw;">
-                    <div>
-                        <h4 class="">CUHKERS AND THEIR CAREERS</h4>
-                        <div class="w-75">
-                            <p class="fw-light" style="font-size: 110%;">Embraced by hills and the sea, the Chinese University of Hong Kong (CUHK) is dearly called by our fellow students as the "mountain city". It is such nature that resembles CUHK's nurturing of its students: Like the bees and butterflies that pollinate amidst blossoming flowers, students spread and apply their knowledge to society; Like the tree branches that intertwine, the college system facilitates a strong network among students from all walks of life; Like the water that ebbs and flows, students come together and travel in all directions. Old trees on campus document all these with their tree rings, testifying how the university nurtures talents and witnessing our hard work bearing fruit.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div> -->
+        </section>
 
         <div class="container-fluid p-5 bg-white text-center fw-light">
             Copyright © 2020. All Rights Reserved. The Chinese University of Hong Kong.
