--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<!-- 
+    Unfinished
+    1) Page Language at right top corner
+    2) "Click here to read" not link to E-book at footer
+    3) text of "CUHKERS AND THEIR CAREERS" (at footer) not changed
+ -->
+
 <html lang="en">
     <head>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -32,7 +39,7 @@
                     <div class="intro p-5 m-0 flex-column" data-aos="zoom-in-up">
                         <h4 class="mb-3">"What I learnt from CUHK"</h4>
                         <p>
-                            We have interviewed 10 students and alumni who studied at CUHK at different times to reflect on the identity of CUHKers, and what they learnt from the University. The interviewees include people from all walks of life, from business leaders, working professionals, well-known radio DJ, founder of a social venture, to undergraduates from diverse academic disciplines who are yet to embark on their professional journeys. Despite their differences in age, backgrounds and professions, they all share some qualities in common as CUHKers.
+                            Following the footsteps of Adam Wong and Saville Chan, alumni and renowned filmmakers, this publication documents stories from various CUHK alumni, and highlights qualities that are embodied by CUHKers. This includes Connection (Architect Sarah Mui), Companionship (Houseman Rachel Leung), Friendship (Entrepreneur Ashley Chan), Reinvention (Kintsugi Master Enders Wong), and Staying True (Directors Adam Wong and Saville Chan). In CUHKers and Their Careers, you will find distinctive stories from different generations, all of which encapsulate the daring yet noble CUHK spirit.
                         </p>
                     </div>
                 </div>
@@ -45,6 +52,7 @@
                 <div class="row">
 
                     <div class="col-12 col-lg-6 mb-5 p-4" data-aos="zoom-in-up">
+                        <a href="https://youtu.be/0YaJ-bgYYzs" target="_blank" rel="noopener noreferrer">
                         <div id="container0" class="container-wiggle">
                             <div id="inner0" class="inner-wiggle">
                                 <div id="flower-container" class="container d-flex flex-row flex-wrap p-0">
@@ -52,17 +60,20 @@
                                     <img class="col-12 col-md-6" src="./static/1.png">
                                     <div id="text" class="col-12 col-md-6 ps-4 pt-4">
                                         <div class="">EP | 1 </div>
-                                        <h4 class="pt-4">Multimedia Thinking</h4>
-                                        <div class="fw-light" style="font-size: 90%;">Sammy Leung</div>
-                                        <div class="fw-light" style="font-size: 90%;">Radio DJ</div>
-                                        <div class="fw-light" style="font-size: 90%;">School of Journalism and Communication</div>
+                                        <!-- Name -->
+                                        <h4 class="pt-4">Connection</h4>
+                                        <div class="fw-light" style="font-size: 90%;">Sarah Mui</div>
+                                        <div class="fw-light" style="font-size: 90%;">Co-founder of One Bite Design</div>
+                                        <div class="fw-light" style="font-size: 90%;">Architecture</div>
                                     </div>
                                 </div>
                             </div>
                         </div>
+                        </a>
                     </div>
 
                     <div class="col-12 col-lg-6 mb-5 p-4" data-aos="zoom-in-up">
+                        <a href="https://youtu.be/YZAUeJcvzKo" target="_blank" rel="noopener noreferrer">
                         <div id="container1" class="container-wiggle">
                             <div id="inner1" class="inner-wiggle d-flex flex-row flex-wrap container p-0">
                                 <div id="flower-container" class="container d-flex flex-row flex-wrap p-0">
@@ -70,17 +81,19 @@
                                     <img class="col-12 col-md-6" src="./static/2.png">
                                     <div id="text" class="col-12 col-md-6 ps-4 pt-4">
                                         <div class="">EP | 2 </div>
-                                        <h4 class="pt-4">Multimedia Thinking</h4>
-                                        <div class="fw-light" style="font-size: 90%;">Sammy Leung</div>
-                                        <div class="fw-light" style="font-size: 90%;">Radio DJ</div>
-                                        <div class="fw-light" style="font-size: 90%;">School of Journalism and Communication</div>
+                                        <h4 class="pt-4">Companion</h4>
+                                        <div class="fw-light" style="font-size: 90%;">Rachel Leung</div>
+                                        <div class="fw-light" style="font-size: 90%;">Houseman</div>
+                                        <div class="fw-light" style="font-size: 90%;">Medicine (MBChB) Programme</div>
                                     </div>
                                 </div>
                             </div>
                         </div>
+                        </a>
                     </div>
 
                     <div class="col-12 col-lg-6 mb-5 p-4" data-aos="zoom-in-up">
+                        <a href="https://youtu.be/Y3TCWs4v01A" target="_blank" rel="noopener noreferrer">
                         <div id="container2" class="container-wiggle">
                             <div id="inner2" class="inner-wiggle d-flex flex-row flex-wrap container p-0">
                                 <div id="flower-container" class="container d-flex flex-row flex-wrap p-0">
@@ -88,17 +101,19 @@
                                     <img class="col-12 col-md-6" src="./static/3.png">
                                     <div id="text" class="col-12 col-md-6 ps-4 pt-4">
                                         <div class="">EP | 3 </div>
-                                        <h4 class="pt-4">Multimedia Thinking</h4>
-                                        <div class="fw-light" style="font-size: 90%;">Sammy Leung</div>
-                                        <div class="fw-light" style="font-size: 90%;">Radio DJ</div>
-                                        <div class="fw-light" style="font-size: 90%;">School of Journalism and Communication</div>
+                                        <h4 class="pt-4">Friendship</h4>
+                                        <div class="fw-light" style="font-size: 90%;">Ashley Chan</div>
+                                        <div class="fw-light" style="font-size: 90%;">Founder of Blendit</div>
+                                        <div class="fw-light" style="font-size: 90%;">Accounting</div>
                                     </div>
                                 </div>
                             </div>
                         </div>
+                        </a>
                     </div>
 
                     <div class="col-12 col-lg-6 mb-5 p-4" data-aos="zoom-in-up">
+                        <a href="https://youtu.be/U1d76T0XVto" target="_blank" rel="noopener noreferrer">
                         <div id="container3" class="container-wiggle">
                             <div id="inner3" class="inner-wiggle d-flex flex-row flex-wrap container p-0">
                                 <div id="flower-container" class="container d-flex flex-row flex-wrap p-0">
@@ -106,33 +121,37 @@
                                     <img class="col-12 col-md-6" src="./static/4.png">
                                     <div id="text" class="col-12 col-md-6 ps-4 pt-4">
                                         <div class="">EP | 4 </div>
-                                        <h4 class="pt-4">Multimedia Thinking</h4>
-                                        <div class="fw-light" style="font-size: 90%;">Sammy Leung</div>
-                                        <div class="fw-light" style="font-size: 90%;">Radio DJ</div>
-                                        <div class="fw-light" style="font-size: 90%;">School of Journalism and Communication</div>
+                                        <h4 class="pt-4">Reinvention</h4>
+                                        <div class="fw-light" style="font-size: 90%;">Enders Wong</div>
+                                        <div class="fw-light" style="font-size: 90%;">Ceramics Artist, Kintsugi Artist</div>
+                                        <div class="fw-light" style="font-size: 90%;">Fine Arts, MA Fine Arts</div>
                                     </div>
                                 </div>
                             </div>
                         </div>
+                        </a>
                     </div>
 
                     <div class="col-12 col-lg-6 mb-5 p-4" data-aos="zoom-in-up">
+                        <a href="https://youtu.be/HyPsWLCfHis" target="_blank" rel="noopener noreferrer">
                         <div id="container4" class="container-wiggle">
                             <div id="inner4" class="inner-wiggle d-flex flex-row flex-wrap container p-0">
                                 <div id="flower-container" class="container d-flex flex-row flex-wrap p-0">
                                     <div id="flower4" class="flower-transition"></div>
-                                    <img class="col-12 col-md-6" src="./static/ep1.jpeg">
+                                    <img class="col-12 col-md-6" src="./static/5.png">
                                     <div id="text" class="col-12 col-md-6 ps-4 pt-4">
                                         <div class="">EP | 5 </div>
-                                        <h4 class="pt-4">Multimedia Thinking</h4>
-                                        <div class="fw-light" style="font-size: 90%;">Sammy Leung</div>
-                                        <div class="fw-light" style="font-size: 90%;">Radio DJ</div>
-                                        <div class="fw-light" style="font-size: 90%;">School of Journalism and Communication</div>
+                                        <h4 class="pt-4">Staying True</h4>
+                                        <div class="fw-light" style="font-size: 90%;">Adam Wong</div>
+                                        <div class="fw-light" style="font-size: 90%;">Director | Writer | Producer</div>
+                                        <div class="fw-light" style="font-size: 90%;">Fine Arts</div>
                                     </div>
                                 </div>
                             </div>
                         </div>
+                        </a>
                     </div>
+
                 </div>
             </div>
         </section>
@@ -148,7 +167,7 @@
                     <div class="col col-12 col-lg-6">
                         <div class="intro" data-aos="zoom-in-up">
                             <div class="wrap ani animated" data-ani-delay=".5" style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">
-                                <h1>CUHKERS AND THEIR  CAREERS</h1>
+                                <h2>CUHKERS AND THEIR  CAREERS</h2>
                                 <p>
                                     Embraced by hills and the sea, the Chinese University of Hong Kong (CUHK) is dearly called by our fellow students as the "mountain city". It is such nature that resembles CUHK's nurturing of its students:
                                     Like the bees and butterflies that pollinate amidst blossoming flowers, students spread and apply their knowledge to society;
