--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
         <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
         <link href="./style.css" rel="stylesheet">
+        <link rel="icon" href="./static/CUHK.svg.png" type="image/icon type">
+
+
+        <title>The Office of Student Affairs</title>
     </head>
     <body class="bg">
 
