--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <img style="position: absolute; height: 360px; top: 25%; left: -10%;" src="static/flower uncrop/Staying True.png"/> -->
 
         <div class="container-xl pt-3 pb-1">
-            <h1 class="mb-3 text-center fw-light" data-text="The Dynamics and Steadfastness in CUHK" style="font-size: 5vh;">
+            <h1 class="mb-3 text-center fw-light" data-text="The Dynamics and Steadfastness in CUHK">
                 "The Dynamics and Steadfastness in CUHK"
             </h1>
 
