--- a/index.html
+++ b/index.html
@@ -50,10 +50,6 @@
             <img style="position: absolute; height: 360px; top: 25%; left: -10%;" src="static/flower uncrop/Staying True.png"/> -->
 
         <div class="container-xl pt-3 pb-1">
-            <h1 class="mb-3 text-center fw-light" data-text="The Dynamics and Steadfastness in CUHK">
-                "The Dynamics and Steadfastness in CUHK"
-            </h1>
-
             <div class="flex-row justify-content-center row m-0">
                 <iframe class="vid" src="https://www.youtube.com/embed/i1JZ2THMU4A"
                     title="YouTube video player" frameborder="0"
@@ -61,7 +57,13 @@
                     allowfullscreen></iframe>
             </div>
 
-            <div class="intro m-0 flex-column" data-aos="zoom-in-up">
+            <h1 class="text-center mt-4" data-text="The Dynamics and Steadfastness in CUHK">
+                The Dynamics and Steadfastness in CUHK
+            </h1>
+
+            <div class="intro flex-column" data-aos="zoom-in-up">
+                <h2>We are CUHKers II</h2>
+                <h3>Change and constant at CUHK</h3>
                 <p>
                     To kick-start this brand new season in the We are CUHKers series, we invited two of CUHK’s renowned
                     alumni - director Adam Wong and producer Saville Chan - to document their heartfelt chat sessions
@@ -102,7 +104,7 @@
                                         <div class="fw-light" style="font-size: 90%;">Sarah Mui</div>
                                         <div class="fw-light" style="font-size: 90%;">Co-founder of One Bite Design
                                         </div>
-                                        <div class="fw-light" style="font-size: 90%;">Architecture</div>
+                                        <div class="fw-light" style="font-size: 90%;">New Asia | Architecture </div>
                                     </div>
                                 </div>
                             </div>
@@ -125,7 +127,7 @@
                                         <h4 class="pt-4">Companion</h4>
                                         <div class="fw-light" style="font-size: 90%;">Rachel Leung</div>
                                         <div class="fw-light" style="font-size: 90%;">Houseman</div>
-                                        <div class="fw-light" style="font-size: 90%;">Medicine (MBChB) Programme</div>
+                                        <div class="fw-light" style="font-size: 90%;">S.H.Ho | MBChB</div>
                                     </div>
                                 </div>
                             </div>
@@ -148,7 +150,7 @@
                                         <h4 class="pt-4">Friendship</h4>
                                         <div class="fw-light" style="font-size: 90%;">Ashley Chan</div>
                                         <div class="fw-light" style="font-size: 90%;">Founder of Blendit</div>
-                                        <div class="fw-light" style="font-size: 90%;">Accounting</div>
+                                        <div class="fw-light" style="font-size: 90%;">Chung Chi | Professional Accountancy</div>
                                     </div>
                                 </div>
                             </div>
@@ -173,7 +175,8 @@
                                         <div class="fw-light" style="font-size: 90%;">Enders Wong</div>
                                         <div class="fw-light" style="font-size: 90%;">Ceramics Artist | Kintsugi Artist
                                         </div>
-                                        <div class="fw-light" style="font-size: 90%;">Fine Arts, MA Fine Arts</div>
+                                        <div class="fw-light" style="font-size: 90%;">New Asia | Fine Arts</div>
+                                        <div class="fw-light" style="font-size: 90%;">Graduate School | Fine Arts</div>
                                     </div>
                                 </div>
                             </div>
@@ -198,9 +201,8 @@
                                         <div>
                                             <h4 class="pt-4">Staying True</h4>
                                             <div class="fw-light" style="font-size: 90%;">Adam Wong</div>
-                                            <div class="fw-light" style="font-size: 90%;">Director | Writer | Producer
-                                            </div>
-                                            <div class="fw-light" style="font-size: 90%;">Fine Arts</div>
+                                            <div class="fw-light" style="font-size: 90%;">Director | Writer</div>
+                                            <div class="fw-light" style="font-size: 90%;">New Asia | Fine Arts</div>
                                         </div>
 
                                         <div class="text-end pe-4 pb-4 mt-auto">
@@ -228,26 +230,32 @@
             <div class="row">
                 <div class="col col-12 col-lg-6 d-flex justify-content-center">
                     <div class="d-flex justify-content-center" style="max-width: 400px">
+                        <div class="mt-5 pt-4">
                         <img class="foot-pic" data-aos="zoom-in-up"
                             src="./static/0410_CUHKers and Their Careers (Full version).jpg">
+                        </div>
                     </div>
                 </div>
                 <div class="col col-12 col-lg-6">
                     <div class="intro" data-aos="zoom-in-up">
                         <div class="wrap ani animated" data-ani-delay=".5"
                             style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">
-                            <h2>“CUHKers and Their Careers II” eBook</h2>
+                            <h2>CUHKers and Their Careers II eBook</h2>
                             <p>
-                                Embraced by hills and the sea, the Chinese University of Hong Kong (CUHK) is dearly
-                                called by our fellow students as the "mountain city". It is such nature that resembles
-                                CUHK's nurturing of its students:
-                                Like the bees and butterflies that pollinate amidst blossoming flowers, students spread
-                                and apply their knowledge to society;
-                                Like the tree branches that intertwine, the college system facilitates a strong network
-                                among students from all walks of life;
-                                Like the water that ebbs and flows, students come together and travel in all directions.
-                                Old trees on campus document all these with their tree rings, testifying how the
-                                university nurtures talents and witnessing our hard work bearing fruit.
+                                Floriography, the language of flowers, ascribes human values to flowers according to their appearances and
+                                attributes. Likewise, The Chinese University of Hong Kong (CUHK) provides all-round education to students based on
+                                their specific needs and aptitudes, with a view to fostering the qualities that make them excellent leaders.
+
+                                Delphinium symbolises caring for others, which has parallels with CUHKers' commitment to staying connected with
+                                local communities. Chrysanthemum is associated with protection, which is comparable to CUHKers who, with their sense
+                                of responsibility, strive to serve the community and help those in need. Forget-me-not symbolises real friendship,
+                                something that CUHKers build among themselves. Frangipani represents hope and strength, which is comparable to
+                                CUHKers' courage to face different challenges, bringing positive changes for themselves. Platycodon symbolises
+                                staying true to oneself, just as CUHKers stay true to their dreams after graduation.
+
+                                The "mountain city" connects CUHKers so that they become each other's companion. In times when they feel lost and
+                                confused, may the alma mater reminds them about they are and how to stay true to their aspirations.
+                            
                             </p>
                             <div style="position:relative;">
                                 <a class="button-17" role="button">Click Here to Read</a>
@@ -262,8 +270,8 @@
 
     <section class="container-fluid pt-3 bg-white relative justify-content-center d-flex">
         <a class="button-57 col-4" role="button" href="https://www.cuhk.edu.hk/osa/cuhkers/en/">
-            <span class="text">Go to We are CUHKers I</span>
-            <span>CUHKERS</span>
+            <span class="text">We are CUHKers I</span>
+            <span>We are CUHKers I</span>
         </a>
 
     </section>
