--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                             
                             </p>
                             <div style="position:relative;">
-                                <a class="button-17" role="button">Click Here to Read</a>
+                                <a class="button-17" role="button" href="http://ftp.at-creative.com/uploads/germaine-yu-cuhkers/download/2023-0110-web-version/2023-0110-CUHKers%20and%20Their%20Careers.pdf" target="_blank">Click Here to Read</a>
                             </div>
                         </div>
 
