add link to pic

--- a/index.html
+++ b/index.html
@@ -232,8 +232,10 @@
             <div class="row py-4">
                 <div class="col col-12 col-lg-6 d-flex justify-content-center">
                     <div class="d-flex justify-content-center align-items-center" style="max-width: 400px">
-                        <img class="foot-pic" data-aos="zoom-in-up"
-                            src="./static/Cover-2023-0110-CUHKers and Their Careers-1.png">
+                        <a href="http://ftp.at-creative.com/uploads/germaine-yu-cuhkers/download/2023-0110-web-version/2023-0110-CUHKers%20and%20Their%20Careers.pdf" target="_blank">
+                            <img class="foot-pic" data-aos="zoom-in-up"
+                                src="./static/Cover-2023-0110-CUHKers and Their Careers-1.png">
+                        </a>
                     </div>
                 </div>
                 <div class="col col-12 col-lg-6 d-flex align-items-center">
@@ -258,7 +260,7 @@
             </div>
             <div class="justify-content-center d-flex">
                 <a class="button-57 col-4" role="button" href="https://www.cuhk.edu.hk/osa/cuhkers/en/">
-                    <span class="text" id="to-cuhkers1.1"></span>
+                    <span id="to-cuhkers1.1"></span>
                     <span id="to-cuhkers1.2"></span>
                 </a>
             </div>
